objects/sos_auto_setup__c.object
<CustomObject><fields>
        <fullName>deployment__c</fullName>
        <defaultValue>"SOS Deployment"</defaultValue>
        <label>deployment</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>permission_set__c</fullName>
        <defaultValue>"SOS Permission"</defaultValue>
        <label>permission_set</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>queue__c</fullName>
        <defaultValue>"SOS Queue"</defaultValue>
        <label>queue</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>routing_config__c</fullName>
        <defaultValue>"SOS Route"</defaultValue>
        <label>routing_config</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>service_presence__c</fullName>
        <defaultValue>"SOS Online"</defaultValue>
        <label>service_presence</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><description>names of objects for auto create</description><enableFeeds>false</enableFeeds><label>sos_auto_setup</label><visibility>Public</visibility></CustomObject>